--- a/app/globals.css
+++ b/app/globals.css
@@ -63,4 +63,12 @@
       background: rgb(255,119,0);
       background: radial-gradient(circle, rgba(255,119,0,1) 0%, rgba(253,107,29,0.7147059507396709) 50%, rgba(255,149,0,0) 100%); 
     }
+
+    .text-gradient {
+      background: radial-gradient(circle, rgb(255, 219, 103) 0%, rgb(255, 128, 54) 50%, rgb(255, 102, 0) 100%); 
+      background: -webkit-radial-gradient(circle, rgb(255, 219, 103) 0%, rgb(255, 128, 54) 50%, rgb(255, 102, 0) 100%); 
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent
+    }
   }
