--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-ubuntu: var(--font-ubuntu);
+  --font-vt: var(--font-vt);
 }
 
 @theme {
@@ -52,12 +54,10 @@
     70% {
       width: 100%;
       height: 100%;
-      padding: 0;
     }
     100% {
       width: 100%;
       height: 100%;
-      padding: 0.5rem;
     }
   }
 }
