--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,14 @@
   --font-vt: var(--font-vt);
 }
 
+body {
+  background-image: radial-gradient(
+    circle farthest-corner at -24.7% -47.3%,
+    rgba(6, 130, 165, 1) 0%,
+    rgba(34, 48, 86, 1) 66.8%,
+    rgba(15, 23, 42, 1) 100.2%
+  );
+}
 @theme {
   --animate-appOpen: openApp 2s forwards;
   --animate-appClose: closeApp 2s forwards;
