--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
-/* @custom-variant dark (&:is(.dark *)); */
+@custom-variant dark (&:is(.dark *));
 
 /* TW DOCS: When defining theme variables that reference other variables, use the inline option */
 @theme inline {
