--- a/app/globals.css
+++ b/app/globals.css
@@ -47,12 +47,13 @@
 }
 
 body {
-  background-image: radial-gradient(
-    circle farthest-corner at -24.7% -47.3%,
-    rgba(6, 130, 165, 1) 0%,
-    rgba(34, 48, 86, 1) 66.8%,
-    rgba(15, 23, 42, 1) 100.2%
-  );
+  background-image: url('https://images.coolwallpapers.me/picsup/2961189-computer-ubuntu-ubuntu-linux___mixed-wallpapers.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: #000000;
+  height: auto;
+  width: 100%;
   color: white;
 }
 
@@ -134,7 +135,7 @@ body {
       bottom: 0px;
       left: 0px;
       opacity: 0;
-    };
+    }
   }
 }
 
