--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@
 }
 
 body {
-  background-image: url('https://images.coolwallpapers.me/picsup/2961189-computer-ubuntu-ubuntu-linux___mixed-wallpapers.jpg');
+  background-image: url('https://w.wallhaven.cc/full/ym/wallhaven-ymjdxx.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
